feat [ 新增token驗證 ]
